--- a/all.css
+++ b/all.css
@@ -46,7 +46,7 @@ h1 {
 section {
  margin:0.5em 0;
 }
-section div {
+section > div {
  height:0;
  color:white;
  overflow:hidden;
@@ -54,14 +54,11 @@ section div {
  border-bottom-left-radius:20px;
  border-bottom-right-radius:20px;
 }
-section div a {
+section > div a {
  color:white;
 }
-section div p,section div ul,section div h3 {
+section > div p,section > div ul,section > div h3 {
  margin:1em;
-}
-iframe {
- margin:1em 2%;
 }
 h2 a {
  font-size:1.5em;
@@ -77,7 +74,6 @@ h2 a {
  border-bottom-right-radius:0;
  border-bottom:1px solid white;
 }
-
-/* print */
-@media print {
+#bmap {
+ position:relative; width:100%; height:500px;
 }
